--- a/Front/src/app/demo/component/basic-component/color/color.component.html
+++ b/Front/src/app/demo/component/basic-component/color/color.component.html
@@ -42,9 +42,9 @@
               <span class="badge" [ngClass]="{
                 'bg-primary': member.role === 'PRESIDENT',
                 'bg-secondary': member.role === 'VICE_PRESIDENT',
-                'bg-success': member.role === 'SECRETAIRE',
-                'bg-info': member.role === 'TREASORIER',
-                'bg-warning': member.role === 'MEMBRE'
+                'bg-success': member.role === 'SECRETARY',
+                'bg-info': member.role === 'TREASURER',
+                'bg-warning': member.role === 'MEMBER'
               }">
                 {{ member.role }}
               </span>
