--- a/Front/src/app/demo/component/basic-component/color/color.component.scss
+++ b/Front/src/app/demo/component/basic-component/color/color.component.scss
@@ -49,6 +49,10 @@
     padding: 0.25rem 0.5rem;
     font-size: 0.875rem;
   }
+
+  .bg-warning {
+    background-color: #ffc107 !important;
+  }
   
   .text-truncate {
     max-width: 200px;
