--- a/Front/src/app/accueil/accueil.component.scss
+++ b/Front/src/app/accueil/accueil.component.scss
@@ -1298,4 +1298,30 @@ textarea.form-control {
         .form-row {
           grid-template-columns: 1fr;
         }
+        .alert {
+          padding: 10px;
+          margin-bottom: 15px;
+          border-radius: 5px;
+          font-weight: 500;
+        }
+        
+        .alert-success {
+          background-color: #d4edda;
+          color: #155724;
+          border: 1px solid #c3e6cb;
+        }
+        
+        .alert-danger {
+          background-color: #f8d7da;
+          color: #721c24;
+          border: 1px solid #f5c6cb;
+        }
+        
+        
       }
+      .error-message {
+        color: red;
+        font-size: 0.9rem;
+        margin-top: 4px;
+      }
+      
